# TrackBuy

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
public/tessdata/: README.md
scripts/: fetch-tessdata.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  attachments.rs  auth.rs  backup.rs  bank_statements.rs  camt053.rs  cards.rs  classify.rs  creditors.rs  engagements.rs  filename_templates.rs  files.rs  household.rs  incomes.rs  items.rs  locations.rs  merchants.rs  mod.rs  pending_invoices.rs  pending_reimbursements.rs  qrbill.rs  reminders.rs  subscriptions.rs  swiss_seed.rs  taxes.rs  this_month.rs  warranties.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/util/: mod.rs  path.rs  secure_delete.rs  test_support.rs
src/components/: error-boundary.tsx
src/hooks/: use-cancellation-notifications.ts  use-engagement-notifications.ts  use-idle-lock.ts  use-modal-keyboard.ts  use-notifications.ts  use-subscription-notifications.ts  use-theme.ts
src/lib/: ai-settings.ts  cancellation.ts  currencies.ts  export.ts  filename-template.ts  finance.ts  fuzzy-match.ts  i18n.ts  password.ts  qr-scan.ts  tauri.ts  utils.ts
src/pages/: bank-statement-review.tsx  bank-statements.tsx  banque.tsx  cards.tsx  ce-mois.tsx  creditors.tsx  dashboard.tsx  (+25 more)
(+27 files in other folders)
