[package]
name = "trackbuy"
version = "0.1.0"
edition = "2024"
description = "TrackBuy - Encrypted purchase tracker"
authors = ["TrackBuy"]

[lib]
name = "trackbuy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
